2005-10-17  Martin Hunt  <hunt@redhat.com>
	PR 1482
	* tapsets.cxx (emit_registrations): On failure, don't
	forget to unregister probe 0;

2005-10-17  Frank Ch. Eigler  <fche@elastic.org>

	PR 1338.
	* parse.cx (parse_probe): Unconditionally visit parse_probe_point.
	(parse_probe_point): Accept "*" as component name.
	* stapprobes.5.in: Document this.
	* elaborate.cxx (derive_probes): Rewrite.  Make top-level function.
	(match_node::find_and_build): New function to replace
	(find_builder): Removed.
	(match_key operator <): Correct one nasty typo.
	(match_node::bind): Refuse to bind "*" component names.
	(derived_probe_builder::build): Remove recursion output param.
	(alias_expandion_builder::build): Recurse to derive_probes instead.
	* elaborate.h: Corresponding changes.
	* tapsets.cxx: Ditto.
	(query_cu): Elide prologue finding for uninteresting CUs.
	* testsuite/semok/nineteen.stp: New test.
	* testsuite/semko/twentythree.stp: New test.
	* testsuite/semko/twentyone/two.stp: Fix -p2.

2005-10-17  Graydon Hoare  <graydon@redhat.com>

	* testsuite/semko/twentyone.stp: Check function doesn't match inline.
	
	* testsuite/semko/twentytwo.stp: Check inline doesn't match function.

	* testsuite/buildok/six.stp: Change "function" to "inline".

	* stapprobes.5.in: Describe "inline" probes.

	* tapsets.cxx (TOK_INLINE): New token "inline".
	(dwarf_query::has_inline_str) 
	(dwarf_query::has_inline_num) 
	(dwarf_query::inline_str_val) 
	(dwarf_query::inline_num_val): New members.
	(dwarf_query::dwarf_query): Load new members. 
	(query_dwarf_inline_instance)
	(query_dwarf_func)
	(query_cu)
	(query_module)
	(dwarf_derived_probe::add_probe_point)
	(dwarf_builder::build): 
	Use inline-related members where appropriate.	
	(dwarf_derived_probe::register_inline_variants): New method.
	(dwarf_derived_probe::register_function_and_statement_variants): 
	Call it.

2005-10-14  Roland McGrath  <roland@redhat.com>

	PR 1271.